--- a/src/App.css
+++ b/src/App.css
@@ -20,3 +20,15 @@
 .Home > * {
     padding: 1rem;
 }
+
+.li{
+    display: flex;
+    justify-content: space-between;
+    margin: 1rem 0;
+    background-color: dodgerblue;
+    list-style-type: none;
+    padding: 1rem;
+}
+.decoration {
+    text-decoration: underline;
+}
